Clean up mgmt metrics reports to reduce duplicated code